--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         </ol>
 
         
-        
+        <a href="https://liviafernand.github.io/aula2/parte2.html">Lista Generos Musicais</a>
 
 
 
