--- a/parte2.html
+++ b/parte2.html
@@ -115,6 +115,8 @@
                     </li>
             </ul>
 
+            <a href="https://liviafernand.github.io/aula2/parte3.html">Lista Navegadores e Redes Sociais</a>
+
         </body>
     </head>
 </html>
