--- a/parte3.html
+++ b/parte3.html
@@ -131,7 +131,7 @@
             </ul>
 
 
-
+            <a href="https://liviafernand.github.io/aula2/index.html">Lista tipos de arte</a>
 
 
     </body>
